--- a/TODO
+++ b/TODO
@@ -4,5 +4,6 @@ Document the API, ensuring that all parameters are documented properly for Doxyg
 
 Start the asteroids game by making it capable of connecting to a server, and start the asteroids server.
 
-
+The line needed to make the server able to use pygame and run headless:
+    os.environ["SDL_VIDEODRIVER"] = "dummy"
 
